@@ -12,6 +12,10 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Patch #602345: Add -B command line option, PYTHONDONTWRITEBYTECODE envvar
+  and sys.dont_write_bytecode attribute. All these can be set to forbid Python
+  to attempt to write compiled bytecode files.
+
 - Improve some exception messages when Windows fails to load an extension
   module. Now we get for example '%1 is not a valid Win32 application' instead
   of 'error code 193'.
